[gd_scene load_steps=3 format=3 uid="uid://cnnpn5e2w37it"]

[ext_resource type="Script" path="res://Scripts/escolhas.gd" id="1_l2c6n"]

[sub_resource type="LabelSettings" id="LabelSettings_mrdjn"]
font_size = 30
shadow_size = 10
shadow_color = Color(0.156863, 0.196078, 0.560784, 0.901961)

[node name="Node" type="Node2D"]
visible = false
position = Vector2(800, 450)
script = ExtResource("1_l2c6n")

[node name="Escolhas" type="PanelContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -350.0
offset_top = -250.0
offset_right = 350.0
offset_bottom = 250.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="Escolhas"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="VBoxContainer" type="VBoxContainer" parent="Escolhas/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="Label" type="Label" parent="Escolhas/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Escolha uma peça para mover"
label_settings = SubResource("LabelSettings_mrdjn")
horizontal_alignment = 1

[node name="Escolha1" type="Button" parent="Escolhas/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Peça 1"

[node name="Escolha2" type="Button" parent="Escolhas/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Peça 2"

[node name="Escolha3" type="Button" parent="Escolhas/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Peça 3"

[node name="Escolha4" type="Button" parent="Escolhas/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Peça 4"

[node name="Escolha5" type="Button" parent="Escolhas/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Peça 5"

[node name="Escolha6" type="Button" parent="Escolhas/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Peça 6"

[connection signal="button_down" from="Escolhas/MarginContainer/VBoxContainer/Escolha1" to="." method="_on_escolha_1_button_down"]
[connection signal="button_down" from="Escolhas/MarginContainer/VBoxContainer/Escolha2" to="." method="_on_escolha_2_button_down"]
[connection signal="button_down" from="Escolhas/MarginContainer/VBoxContainer/Escolha3" to="." method="_on_escolha_3_button_down"]
[connection signal="button_down" from="Escolhas/MarginContainer/VBoxContainer/Escolha4" to="." method="_on_escolha_4_button_down"]
[connection signal="button_down" from="Escolhas/MarginContainer/VBoxContainer/Escolha5" to="." method="_on_escolha_5_button_down"]
[connection signal="button_down" from="Escolhas/MarginContainer/VBoxContainer/Escolha6" to="." method="_on_escolha_6_button_down"]
